# Bootloader-Rust

./: README.md
STM32_Bootloader/: readme.md
STM32_Bootloader/boot_firmware/: Cargo.toml
boot_firmware/src/: main.rs
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
