[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2"
embedded-hal = "0.2"
cortex-m = "0.7.1"
cortex-m-rt = "0.6.15"
defmt = "0.3.0"
defmt-rtt = {version = "0.3.1"}
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f411"]

[features]
default = ['defmt-default']
# these features are required by defmt
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []

[profile.release]
debug = true
lto = true
opt-level = "s"